--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,14 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.Shoppre" parent="Theme.MaterialComponents.Light.NoActionBar">
-
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
+        <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
@@ -16,17 +15,45 @@
         <item name="android:fontFamily">@font/montserrat</item>
         <item name="android:dropDownListViewStyle">@style/MySpinner</item>
     </style>
+
+    //Dialogue Theme
     <!--    <style name="Custom" parent="android:Theme.DeviceDefault.Dialog">-->
     <!--        <item name="DialogTitleAppearance">@android:style/TextAppearance.Medium</item>-->
     <!--        <item name="DialogTitleText">Please Wait</item>-->
     <!--        <item name="DialogSpotColor">@color/hint_color</item>-->
     <!--        <item name="DialogSpotCount">8</item>-->
     <!--    </style>-->
-    <style name="MySpinner" parent="Theme.MaterialComponents.Light.NoActionBar">
-        <item name="android:dividerHeight">0.5dp</item>
-        <item name="android:divider">#C4C4C4</item>
+
+    <style name="PopupMenu">
+        <item name="android:itemBackground">@color/box_background_color</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:colorBackground">@color/hint_color</item>
+        <item name="android:dividerHeight">1dp</item>
+    </style>
+
+    <style name="MineCustomTabText" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="textAllCaps">false</item>
     </style>
 
 
 
+
+    <style name="SpinnerStyle" parent="Widget.AppCompat.ListView.DropDown">
+        <item name="android:divider">#d1d1d1</item>
+        <item name="android:dividerHeight">0.5dp</item>
+    </style>
+
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:dropDownListViewStyle">@style/SpinnerStyle</item>
+    </style>
+
+    <!--   spinner Theme -->
+    <style name="MySpinner" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="android:dividerHeight">0.5dp</item>
+        <item name="android:divider">#C4C4C4</item>
+
+    </style>
 </resources>
