--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -41,14 +41,14 @@
 
 
 
-<!--    <style name="SpinnerStyle" parent="Widget.AppCompat.ListView.DropDown">-->
-<!--        <item name="android:divider">#d1d1d1</item>-->
-<!--        <item name="android:dividerHeight">0.5dp</item>-->
-<!--    </style>-->
+    <style name="SpinnerStyle" parent="Widget.AppCompat.ListView.DropDown">
+        <item name="android:divider">#d1d1d1</item>
+        <item name="android:dividerHeight">0.5dp</item>
+    </style>
 
-<!--    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">-->
-<!--    <item name="android:dropDownListViewStyle">@style/SpinnerStyle</item>-->
-<!--    </style>-->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <item name="android:dropDownListViewStyle">@style/SpinnerStyle</item>
+    </style>
 
 <!--   spinner Theme -->
     <style name="MySpinner" parent="Theme.MaterialComponents.Light.NoActionBar">
@@ -56,21 +56,4 @@
         <item name="android:divider">#C4C4C4</item>
 
     </style>
-
-
-<!--    <style name="menu_text_style" parent="Theme.MaterialComponents.Light.NoActionBar">-->
-<!--        <item name="android:textSize">10sp</item>-->
-<!--        <item name="android:textColor">@color/black</item>-->
-<!--        <item name="android:textAllCaps">false</item>-->
-<!--    </style>-->
-
-<!--    <style name="AppThemeActivity" parent="Theme.MaterialComponents.Light.NoActionBar">-->
-<!--        <item name="android:actionMenuTextAppearance">@style/menu_text_style</item>-->
-<!--        ...-->
-<!--    </style>-->
-
-
-
-
-
 </resources>
