--- a/app/src/main/res/layout/fragment_shipment_landing.xml
+++ b/app/src/main/res/layout/fragment_shipment_landing.xml
@@ -692,9 +692,10 @@
 
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
+                        android:gravity="center_horizontal"
+                        android:layout_marginHorizontal="24dp"
                         android:layout_marginTop="19dp">
                         <androidx.cardview.widget.CardView
                             android:id="@+id/downloadInvoiceBtn"
