--- a/app/src/main/res/layout/fragment_shipment_updates.xml
+++ b/app/src/main/res/layout/fragment_shipment_updates.xml
@@ -5,6 +5,19 @@
     android:layout_height="match_parent"
     tools:context=".UI.Shipment.ShipmentFragment.ShipmentTabLayout.ShipmentUpdates">
 
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
 
 
 </FrameLayout>
