--- a/app/src/main/res/layout/upload_invoice_single_layout.xml
+++ b/app/src/main/res/layout/upload_invoice_single_layout.xml
@@ -16,6 +16,7 @@
         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_gravity="top"
             android:src="@drawable/ic_self_shopper"/>
 
         <LinearLayout
