--- a/app/src/main/res/layout/package_details_single_layout.xml
+++ b/app/src/main/res/layout/package_details_single_layout.xml
@@ -19,13 +19,14 @@
             android:layout_height="52dp"
             android:background="@drawable/package_image_border"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="4dp">
 
             <ImageView
                 android:id="@+id/packageItemImage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/package_image_border"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
                 android:src="@drawable/mobile1" />
 
 
