--- a/app/src/main/res/layout/view_photo_dialog.xml
+++ b/app/src/main/res/layout/view_photo_dialog.xml
@@ -174,31 +174,26 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:layout_marginHorizontal="44dp"
+            android:gravity="center_horizontal"
             android:layout_marginBottom="20dp">
 
             <ImageView
                 android:id="@+id/secondPhoto"
                 android:layout_width="64dp"
                 android:layout_height="65dp"
-                android:layout_weight="1"
+                android:layout_marginRight="40dp"
+
                 android:src="@drawable/additional_image"/>
 
             <ImageView
                 android:id="@+id/thirdPhoto"
                 android:layout_width="64dp"
                 android:layout_height="65dp"
-                android:layout_weight="1"
-                android:layout_marginLeft="31dp"
+
+
                 android:src="@drawable/additional_image"/>
 
-            <ImageView
-                android:id="@+id/fourthPhoto"
-                android:layout_width="64dp"
-                android:layout_height="65dp"
-                android:layout_weight="1"
-                android:layout_marginLeft="31dp"
-                android:src="@drawable/additional_image"/>
+
 
         </LinearLayout>
 
