--- a/app/src/main/res/layout/fragment_shipment_landing.xml
+++ b/app/src/main/res/layout/fragment_shipment_landing.xml
@@ -719,6 +719,7 @@
 
                         </androidx.cardview.widget.CardView>
                         <com.google.android.material.button.MaterialButton
+                            android:id="@+id/trackShipmentBtn"
                             android:layout_width="wrap_content"
                             android:layout_height="27dp"
                             android:insetTop="0dp"
