--- a/app/src/main/res/layout/fragment_locker_ready_to_ship.xml
+++ b/app/src/main/res/layout/fragment_locker_ready_to_ship.xml
@@ -112,6 +112,7 @@
 
 
             <androidx.cardview.widget.CardView
+                android:visibility="gone"
                 android:id="@+id/emptyLockerCard"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -124,7 +125,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    >
 
                     <LinearLayout
                         android:layout_width="match_parent"
