--- a/app/src/main/res/layout/fragment_locker_view_package.xml
+++ b/app/src/main/res/layout/fragment_locker_view_package.xml
@@ -183,7 +183,7 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
                         <TextView
@@ -191,14 +191,16 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="600"
                             android:text="Received On: "
+                            android:gravity="right"
                             android:textColor="@color/black"
                             android:textSize="10sp" />
 
                         <TextView
                             android:id="@+id/date"
+                            android:gravity="right"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="600"
+                            android:textFontWeight="600"
                             android:text="15 Dec 2020"
                             android:textColor="@color/black"
                             android:textSize="10sp" />
