--- a/app/src/main/res/layout/package_update_single_layout.xml
+++ b/app/src/main/res/layout/package_update_single_layout.xml
@@ -14,7 +14,8 @@
         android:src="@drawable/shoppre_ic"/>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_marginRight="39dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginLeft="14dp">
@@ -36,6 +37,7 @@
             android:text="New Order Placed"
             android:textFontWeight="500"
             android:textSize="12sp"
+
             android:textColor="@color/black"/>
 
         <TextView
