--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,17 @@
         <!-- Customize your theme here. -->
         <item name="android:fontFamily">@font/montserrat</item>
         <item name="android:dropDownListViewStyle">@style/MySpinner</item>
+
+
+        ////////////////////////
+        <!-- Change Overflow Menu ListView Item Height & Property -->
+        <item name="android:listPreferredItemHeightSmall">30dp</item>
+        <item name="android:listPreferredItemPaddingLeft">5dp</item>
+        <item name="android:listPreferredItemPaddingRight">5dp</item>
+
+
+<!--        <item name="android:actionBarWidgetTheme">@style/PopupMenuTextView</item>-->
+<!--        <item name="android:popupMenuStyle">@style/PopupMenuBackground</item>-->
     </style>
 
     //Dialogue Theme
@@ -54,6 +65,21 @@
     <style name="MySpinner" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:dividerHeight">0.5dp</item>
         <item name="android:divider">#C4C4C4</item>
+
+    </style>
+
+
+    ////////////
+    <style name="PopupMenuTextView" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:textColor">#00FF00</item>
+        <item name="android:textSize">10sp</item>
+        <item name="fontWeight">500</item>
+
+    </style>
+
+    <style name="PopupMenuBackground" parent="android:Widget.Holo.Light.ListPopupWindow">
+<!--        <item name="android:popupBackground">#e3e3e3</item>-->
+
 
     </style>
 </resources>
