--- a/app/src/main/res/layout/fragment_locker_view_package.xml
+++ b/app/src/main/res/layout/fragment_locker_view_package.xml
@@ -141,7 +141,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="600"
+                            android:textFontWeight="600"
                             android:text="Package ID: "
                             android:textColor="@color/black"
                             android:textSize="10sp" />
@@ -150,7 +150,7 @@
                             android:id="@+id/packageId"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="600"
+                            android:textFontWeight="600"
                             android:text=" #8473"
                             android:textColor="@color/black"
                             android:textSize="10sp" />
@@ -189,7 +189,8 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="600"
+                            android:textFontWeight="600"
+                            android:layout_weight="1"
                             android:text="Received On: "
                             android:gravity="right"
                             android:textColor="@color/black"
