--- a/app/src/main/res/layout/create_ship_single_layout.xml
+++ b/app/src/main/res/layout/create_ship_single_layout.xml
@@ -53,10 +53,33 @@
             android:textSize="10sp" />
 
         <TextView
+            android:visibility="gone"
+            android:id="@+id/damaged"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
             android:text="Contains Damaged Items"
+            android:textColor="#FF0101"
+            android:textFontWeight="500"
+            android:textSize="10sp" />
+
+        <TextView
+            android:visibility="gone"
+            android:id="@+id/restricted"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3dp"
+            android:text="Contains Restricted Items"
+            android:textColor="#FF0101"
+            android:textFontWeight="500"
+            android:textSize="10sp" />
+        <TextView
+            android:visibility="gone"
+            android:id="@+id/both"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3dp"
+            android:text="Contains Damaged &amp; \nRestricted Items"
             android:textColor="#FF0101"
             android:textFontWeight="500"
             android:textSize="10sp" />
