--- a/app/src/main/res/layout/create_shipment_delivery_address.xml
+++ b/app/src/main/res/layout/create_shipment_delivery_address.xml
@@ -22,10 +22,10 @@
                 android:layout_marginLeft="23dp">
 
                 <RadioButton
-                    android:id="@+id/createShipmentAddressRadioBtn"
-                    android:layout_width="26dp"
-                    android:layout_height="22dp"
-                    android:layout_gravity="center_vertical"/>
+                    android:id="@+id/radioBtn"
+                    android:layout_width="25dp"
+                    android:layout_height="20dp"
+                    android:layout_gravity="center_vertical" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
