--- a/app/src/main/res/layout/fragment_create_ship_request.xml
+++ b/app/src/main/res/layout/fragment_create_ship_request.xml
@@ -177,6 +177,7 @@
                        android:layout_gravity="center_horizontal">
 
                        <androidx.cardview.widget.CardView
+                           android:id="@+id/back"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:cardCornerRadius="5dp"
