--- a/app/src/main/res/layout/fragment_create_shipment_delivery_address.xml
+++ b/app/src/main/res/layout/fragment_create_shipment_delivery_address.xml
@@ -82,6 +82,7 @@
             android:layout_marginBottom="31dp"
             android:layout_gravity="center_horizontal">
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/back"
                 android:layout_width="wrap_content"
                 android:layout_height="32dp"
                 android:insetBottom="0dp"
@@ -111,10 +112,11 @@
                 android:textColor="@color/white"
                 android:textFontWeight="700"
                 app:icon="@drawable/return_arrow"
-                app:backgroundTint="#2D8DFF"
+                android:backgroundTint="@color/grey"
                 app:iconGravity="end"
                 app:iconTint="@color/white"
-                android:letterSpacing="0.03"/>
+                android:letterSpacing="0.03"
+                android:enabled="false"/>
         </LinearLayout>
 
     </LinearLayout>
