--- a/app/src/main/res/layout/fragment_create_shipping_prefrence.xml
+++ b/app/src/main/res/layout/fragment_create_shipping_prefrence.xml
@@ -50,9 +50,9 @@
                             android:layout_gravity="center_vertical" />
 
                         <LinearLayout
-                            android:layout_gravity="center_vertical"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
                             android:layout_marginLeft="12dp"
                             android:layout_weight="1"
                             android:orientation="vertical">
@@ -155,9 +155,9 @@
                             android:layout_gravity="center_vertical" />
 
                         <LinearLayout
-                            android:layout_gravity="center_vertical"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
                             android:layout_marginLeft="12dp"
                             android:layout_weight="1"
                             android:orientation="vertical">
@@ -247,9 +247,9 @@
 
 
                     <LinearLayout
-                        android:layout_marginTop="25dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="25dp"
                         android:orientation="horizontal"
                         android:paddingHorizontal="25dp">
 
@@ -261,9 +261,9 @@
                             android:layout_gravity="center_vertical" />
 
                         <LinearLayout
-                            android:layout_gravity="center_vertical"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
                             android:layout_marginLeft="12dp"
                             android:layout_weight="1"
                             android:orientation="vertical">
@@ -338,17 +338,15 @@
                                 android:textSize="12sp" />
 
 
-
-
                         </LinearLayout>
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="25dp"
                         android:orientation="horizontal"
-                        android:paddingHorizontal="25dp"
-                        android:layout_marginTop="25dp">
+                        android:paddingHorizontal="25dp">
 
 
                         <CheckBox
@@ -358,9 +356,9 @@
                             android:layout_gravity="center_vertical" />
 
                         <LinearLayout
-                            android:layout_gravity="center_vertical"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
                             android:layout_marginLeft="12dp"
                             android:layout_weight="1"
                             android:orientation="vertical">
@@ -451,9 +449,9 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="25dp"
                         android:orientation="horizontal"
-                        android:paddingHorizontal="25dp"
-                        android:layout_marginTop="25dp">
+                        android:paddingHorizontal="25dp">
 
 
                         <CheckBox
@@ -463,9 +461,9 @@
                             android:layout_gravity="center_vertical" />
 
                         <LinearLayout
-                            android:layout_gravity="center_vertical"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
                             android:layout_marginLeft="12dp"
                             android:layout_weight="1"
                             android:orientation="vertical">
@@ -499,15 +497,15 @@
 
                             <EditText
                                 android:id="@+id/giftNoteEditText"
-                                android:visibility="gone"
-                                android:layout_marginRight="10dp"
                                 android:layout_width="match_parent"
                                 android:layout_height="26dp"
-                                android:textSize="10sp"
-                                android:textColor="@color/black"
-                                android:paddingLeft="10dp"
                                 android:layout_marginTop="12dp"
-                                android:background="@drawable/edittext_bg"/>
+                                android:layout_marginRight="10dp"
+                                android:background="@drawable/edittext_bg"
+                                android:paddingLeft="10dp"
+                                android:textColor="@color/black"
+                                android:textSize="10sp"
+                                android:visibility="gone" />
 
 
                             <TextView
@@ -558,16 +556,16 @@
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
-                        android:background="#AFADAD"
                         android:layout_marginHorizontal="25dp"
-                        android:layout_marginTop="36dp"/>
+                        android:layout_marginTop="36dp"
+                        android:background="#AFADAD" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="36dp"
                         android:orientation="horizontal"
-                        android:paddingHorizontal="25dp"
-                        android:layout_marginTop="36dp">
+                        android:paddingHorizontal="25dp">
 
 
                         <CheckBox
@@ -577,9 +575,9 @@
                             android:layout_gravity="center_vertical" />
 
                         <LinearLayout
-                            android:layout_gravity="center_vertical"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
                             android:layout_marginLeft="12dp"
                             android:layout_weight="1"
                             android:orientation="vertical">
@@ -605,9 +603,9 @@
 
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_marginRight="10dp"
                                 android:text="@string/get_vip_treatment"
                                 android:textColor="@color/black"
-                                android:layout_marginRight="10dp"
                                 android:textFontWeight="100"
                                 android:textSize="10sp" />
 
@@ -637,18 +635,21 @@
 
 
                     </LinearLayout>
+
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
                         android:layout_marginTop="99dp"
-                        android:layout_marginBottom="44dp"
-                        android:layout_gravity="center_horizontal">
+                        android:layout_marginBottom="44dp">
 
                         <com.google.android.material.button.MaterialButton
+                            android:id="@+id/back"
                             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                             android:layout_width="119dp"
                             android:layout_height="32dp"
                             android:backgroundTint="@color/white"
+                            android:elevation="4dp"
                             android:insetTop="0dp"
                             android:insetBottom="0dp"
                             android:letterSpacing="0.03"
@@ -658,32 +659,33 @@
                             android:textColor="#2D8DFF"
                             android:textFontWeight="700"
                             android:textSize="12sp"
+                            app:elevation="4dp"
                             app:strokeColor="#2D8DFF" />
 
                         <com.google.android.material.button.MaterialButton
                             android:id="@+id/shippingPrefProceedBtn"
                             android:layout_width="wrap_content"
                             android:layout_height="32dp"
-                            android:paddingHorizontal="20dp"
-                            android:insetBottom="0dp"
                             android:layout_marginLeft="20dp"
+                            android:enabled="false"
                             android:insetTop="0dp"
+                            android:insetBottom="0dp"
+                            android:letterSpacing="0.03"
+                            android:paddingHorizontal="20dp"
                             android:text="Proceed"
-                            android:textSize="12sp"
                             android:textAllCaps="false"
                             android:textColor="@color/white"
                             android:textFontWeight="700"
+                            android:textSize="12sp"
+                            app:backgroundTint="@color/grey"
                             app:icon="@drawable/return_arrow"
-                            app:backgroundTint="#2D8DFF"
                             app:iconGravity="end"
-                            app:iconTint="@color/white"
-                            android:letterSpacing="0.03"/>
+                            app:iconTint="@color/white" />
                     </LinearLayout>
                 </LinearLayout>
 
             </com.google.android.material.card.MaterialCardView>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
-
 
 </FrameLayout>
