--- a/app/src/main/res/layout/fragment_shipment_landing.xml
+++ b/app/src/main/res/layout/fragment_shipment_landing.xml
@@ -65,6 +65,7 @@
                                     android:textSize="10sp" />
 
                                 <TextView
+                                    android:id="@+id/deliverToName"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Nikkitha Shanker"
@@ -102,6 +103,7 @@
                                     android:textSize="10sp" />
 
                                 <TextView
+                                    android:id="@+id/viewShipmentShipmentId"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text=" #329865"
@@ -147,6 +149,7 @@
                                     android:textSize="10sp" />
 
                                 <TextView
+                                    android:id="@+id/deliveryAddress"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Airport Rd - \nGarhoud - Dubai - United Arab Emirates"
@@ -185,6 +188,7 @@
                                     android:textSize="10sp" />
 
                                 <TextView
+                                    android:id="@+id/requestDate"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="23 Dec 2020"
@@ -230,6 +234,7 @@
                                     android:textSize="10sp" />
 
                                 <TextView
+                                    android:id="@+id/contactNumber"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="+9714702 4444"
@@ -251,7 +256,7 @@
                                 android:layout_width="21dp"
                                 android:layout_height="21dp"
                                 android:layout_gravity="center_vertical"
-                                android:src="@mipmap/weight" />
+                                android:src="@mipmap/kg_weight" />
 
                             <LinearLayout
                                 android:layout_width="wrap_content"
@@ -267,6 +272,7 @@
                                     android:textSize="10sp" />
 
                                 <TextView
+                                    android:id="@+id/packageWeight"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="3.5 KG"
@@ -282,6 +288,7 @@
             </com.google.android.material.card.MaterialCardView>
 
             <com.google.android.material.card.MaterialCardView
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="21dp"
@@ -328,6 +335,7 @@
                                     android:textSize="10sp" />
 
                                 <TextView
+                                    android:id="@+id/dimension"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="To Be Calculated"
@@ -365,6 +373,7 @@
                                     android:textSize="10sp" />
 
                                 <TextView
+                                    android:id="@+id/volumetricWeight"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="To Be Calculated"
@@ -409,6 +418,7 @@
                                     android:textSize="10sp" />
 
                                 <TextView
+                                    android:id="@+id/finalWeight"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="To Be Calculated"
@@ -446,6 +456,7 @@
                                     android:textSize="10sp" />
 
                                 <TextView
+                                    android:id="@+id/totalCost"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="To Be Calculated"
@@ -458,6 +469,8 @@
                     </LinearLayout>
 
                     <TextView
+                        android:visibility="gone"
+                        android:id="@+id/uploadInvoiceHelpText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="40dp"
@@ -468,6 +481,8 @@
                         android:textSize="8sp" />
 
                     <LinearLayout
+                        android:visibility="gone"
+                        android:id="@+id/uploadInvoiceButtonLayout"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
@@ -514,6 +529,8 @@
                     </LinearLayout>
 
                     <com.google.android.material.card.MaterialCardView
+                        android:id="@+id/inReviewTag"
+                        android:visibility="gone"
                         android:layout_width="wrap_content"
                         android:layout_height="16dp"
                         app:cardCornerRadius="5dp"
@@ -533,6 +550,8 @@
                     </com.google.android.material.card.MaterialCardView>
 
                     <TextView
+                        android:id="@+id/inReviewHelpText"
+                        android:visibility="gone"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
@@ -545,6 +564,7 @@
 
                     <com.google.android.material.button.MaterialButton
                         android:id="@+id/makePaymentBtn"
+                        android:visibility="gone"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="wrap_content"
                         android:layout_height="32dp"
@@ -560,6 +580,8 @@
                         android:textFontWeight="600"
                         android:textSize="12sp"/>
                     <TextView
+                        android:id="@+id/makePaymentHelpText"
+                        android:visibility="gone"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/please_make_the_payment"
@@ -571,7 +593,56 @@
                         android:gravity="center"/>
 
 
+                    <TextView
+                        android:id="@+id/paymentFailedTag"
+                        android:visibility="gone"
+                        android:background="@drawable/pending_invoice_background"
+                        android:gravity="center_vertical"
+                        android:paddingHorizontal="23dp"
+                        android:textSize="8sp"
+                        android:textColor="#FF0101"
+                        android:paddingVertical="3dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="Payment Failed"/>
+
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/retryPaymentBtn"
+                        android:visibility="gone"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="32dp"
+                        android:insetTop="0dp"
+                        android:layout_marginTop="20dp"
+                        android:insetBottom="0dp"
+                        app:cornerRadius="5dp"
+                        app:backgroundTint="#17B28F"
+                        android:text="Retry Payment"
+                        android:textAllCaps="false"
+                        android:letterSpacing="0.03"
+                        android:textColor="@color/white"
+                        android:textFontWeight="600"
+                        android:textSize="12sp"/>
+                    <TextView
+                        android:id="@+id/retryPaymentHelpText"
+                        android:visibility="gone"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Please make the payment within 7 days of initiation\nafter which there’ll be a charge of ₹ 100/day.\nThe charges will be added to the wallet."
+                        android:textColor="#818181"
+                        android:textSize="8sp"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginHorizontal="70dp"
+                        android:layout_gravity="center_horizontal"
+                        android:gravity="center"/>
+
+
                     <LinearLayout
+                        android:id="@+id/uploadWireTransferText"
+                        android:visibility="gone"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -597,6 +668,8 @@
 
 
                     <com.google.android.material.card.MaterialCardView
+                        android:id="@+id/verifyPaymentTag"
+                        android:visibility="gone"
                         android:layout_width="wrap_content"
                         android:layout_height="16dp"
                         app:cardCornerRadius="5dp"
@@ -617,6 +690,8 @@
 
 
                     <TextView
+                        android:id="@+id/verifyPaymentHelpText"
+                        android:visibility="gone"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="We’re confirming your payment status with our bank.\nWe will initiate your shipment after confirmation."
@@ -629,6 +704,8 @@
 
 
                     <TextView
+                        android:id="@+id/changePaymentMethodText"
+                        android:visibility="gone"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Change Payment Method/ Retry Payment"
@@ -640,6 +717,8 @@
 
 
                     <com.google.android.material.card.MaterialCardView
+                        android:id="@+id/paymentConfirmTag"
+                        android:visibility="gone"
                         android:layout_width="wrap_content"
                         android:layout_height="16dp"
                         app:cardCornerRadius="5dp"
@@ -660,6 +739,8 @@
 
 
                     <TextView
+                        android:id="@+id/paymentConfirmHelpText"
+                        android:visibility="gone"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="We’ve recieved your payment.\nYour shipment is being initiated."
@@ -672,6 +753,30 @@
 
 
                     <com.google.android.material.card.MaterialCardView
+                        android:id="@+id/dispatchedTagCard"
+                        android:visibility="gone"
+                        android:layout_width="wrap_content"
+                        android:layout_height="16dp"
+                        app:cardCornerRadius="5dp"
+                        app:cardElevation="0dp"
+                        app:strokeWidth="0dp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="20dp">
+                        <TextView
+
+                            android:background="#EEE5FF"
+                            android:gravity="center_vertical"
+                            android:paddingHorizontal="26dp"
+                            android:textSize="8sp"
+                            android:textColor="#8950FC"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:text="Dispatched"/>
+                    </com.google.android.material.card.MaterialCardView>
+
+                    <com.google.android.material.card.MaterialCardView
+                        android:id="@+id/deliveredTagCard"
+                        android:visibility="gone"
                         android:layout_width="wrap_content"
                         android:layout_height="16dp"
                         app:cardCornerRadius="5dp"
@@ -687,11 +792,13 @@
                             android:textColor="#8950FC"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:text="Dispatched"/>
+                            android:text="Delivered"/>
                     </com.google.android.material.card.MaterialCardView>
 
 
                     <LinearLayout
+                        android:id="@+id/downloadInvoiceLayout"
+                        android:visibility="gone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_horizontal"
