--- a/app/src/main/res/layout/fragment_create_ship_request_summary.xml
+++ b/app/src/main/res/layout/fragment_create_ship_request_summary.xml
@@ -86,6 +86,7 @@
                         android:layout_marginTop="14dp">
 
                         <TextView
+                            android:id="@+id/editAddress"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/edit"
@@ -93,6 +94,7 @@
                             android:textFontWeight="600" />
 
                         <TextView
+                            android:id="@+id/change"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="32dp"
@@ -101,6 +103,7 @@
                             android:textFontWeight="600" />
 
                         <TextView
+                            android:id="@+id/addAddress"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="32dp"
